force-app/main/default/objects/Materia__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Descripcion de la materia, una sinopsis respecto a en que consiste</description>
    <label>Descripcion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>