force-app/main/default/objects/Materia__c/fields/Estudiantes_en_espera__c.field-meta.xml
<CustomField>
    <fullName>Estudiantes_en_espera__c</fullName>
    <label>Estudiantes en espera</label>
    <summaryForeignKey>Lista_Espera__c.Materia__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>