force-app/main/default/objects/Materia__c/fields/Estudiantes_en_grupo__c.field-meta.xml
<CustomField>
    <fullName>Estudiantes_en_grupo__c</fullName>
    <label>Estudiantes en grupo</label>
    <summaryForeignKey>Grupo_Estudiantes__c.Materia__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>