force-app/main/default/objects/Materia__c/fields/Limite_Estudiantes__c.field-meta.xml
<CustomField>
    <fullName>Limite_Estudiantes__c</fullName>
    <label>Limite Estudiantes</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>