force-app/main/default/objects/Materia__c/validationRules/Usuarios_Estudiantes.validationRule-meta.xml
<ValidationRule>
    <fullName>Usuarios_Estudiantes</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name = &quot;Custom: Estudiante&quot;</errorConditionFormula>
    <errorMessage>El usuario debe ser un estudiante solamente</errorMessage>
</ValidationRule>